<resources>
    <string name="app_name">Github Users App</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="name_user_github">Name User</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="input_username">Input Username</string>
    <string name="github_agungwibowo">sidiqpermana</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="url">github link</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
</resources>
