<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">
        <EditText
            android:id="@+id/editUsername"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/input_username"
            android:text="@string/github_agungwibowo" />
        <Button
            android:id="@+id/btnUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/search" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@id/inputText"
        android:id="@+id/rv_github_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_github_users" />


</RelativeLayout>